# sudokusolver

./: .gitignore  .project  Cargo.toml  README.md
.externalToolBuilders/: Build debug.launch  Build release.launch
.github/workflows/: rust.yml
src/: main.rs
