[package]
name = "sudokusolver"
version = "0.3.1"
authors = ["Anders J. Andersen <andersj.andersen@gmail.com>"]
edition = "2018"
description = "A Rust application using fltk as gui to solve sudoku pussels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^0.15"
