[package]
name = "sudokusolver"
version = "0.5.3"
authors = ["Anders J. Andersen <andersj.andersen@gmail.com>"]
edition = "2021"
description = "A Rust application using fltk as gui to solve sudoku pussels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.27"

[profile.release]
strip = "debuginfo"