[package]
name = "sudokusolver"
version = "0.5.15"
authors = ["Anders J. Andersen <andersj.andersen@gmail.com>"]
edition = "2024"
description = "A Rust application using fltk as gui to solve sudoku pussels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.5.6"

[profile.release]
#strip = "debuginfo"